# table_auto_increment

./: .gitignore  README.md  pyproject.toml
src/table_auto_increment/: app.py  schemas.py  table_manager.py
src/table_auto_increment/selenium_automation/: automation_procedure.py  main.py
src/table_auto_increment/static/templates/: index.html
tests/: conftest.py  test_table.py
